Fix info section alignment
Fixed some of the info section alignment by adding text-align: center to
.info-header and justify-content: center to .info-card-container

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ a, .secondary-hero-text{
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    text-align: center;
 }
 
 .info-image{
@@ -101,6 +102,7 @@ a, .secondary-hero-text{
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .info-card{
